# AutoSymb

./: README.md  configure.sh  tool.cabal
app/: Main.hs
examples/: easyIf.while  opsTest.while  simple_symb.while  smallTest.while  smallTest_symb.while  whenTest.while  when_symb.while  while_symb.while
examples/casestudy1/: WHILE.ssos  abs.while  abs_symb.while  concrete.while  if_example.while  limitation.while  loop.while
examples/casestudy2/: box.while  interleaving.while  while_extended.ssos
examples/languages/: Testing.ssos  WHILE_full.ssos  indirect.ssos
examples/swap/: example.swap  swap.ssos
src/: Interpreter.hs  MetaInterpreter.hs  MetaParser.hs  MetaUtil.hs  Normalize.hs  ParserSemantics.hs  ParserSyntax.hs  Runtime.hs  Semantics.hs  Syntax.hs  Validate.hs
